Enlarged font size on warnings

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -964,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see the maps, please refer to the pdf file."
+    "## To see the maps, please refer to the pdf file."
    ]
   },
   {
@@ -1031,7 +1031,7 @@
    "source": [
     "Now the map will be presented:\n",
     "\n",
-    "To see the maps, please refer to the pdf file."
+    "## To see the maps, please refer to the pdf file."
    ]
   },
   {
