Solved some minor problems

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -1029,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the map will be presented:\n",
+    "The map is created:\n",
     "\n",
     "## To see the maps, please refer to the pdf file."
    ]
