--- a/Battle of the Neighborhoods W1P1.ipynb
+++ b/Battle of the Neighborhoods W1P1.ipynb
@@ -5,13 +5,8 @@
    "metadata": {},
    "source": [
     "# Battle of the Neighborhoods - Week 1\n",
-    "## Part 1 of 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Part 1 of 2\n",
+    "\n",
     "### Juan Prieto-Pena"
    ]
   },
@@ -61,6 +56,13 @@
     "\n",
     "The project will be considered successful if a tiered list of Madrid's neighborhoods based on socioeconomic and business diversity in the neighborhood can be presented to the client to inform its prospective employees of their living choices in the city."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
